# kobo_jp_dict

./: Cargo.toml  LICENSE-MIT  README.md
src/: generic_dict.rs  jmdict.rs  kobo.rs  kobo_ja.rs  main.rs  stardict.rs  yomichan.rs
