[package]
name = "kobo_jp_dict"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"


[dependencies]
clap = { version = "3", features = ["wrap_help", "cargo"] }
flate2 = "1"
quick-xml = "0.22"
regex = "1.5"
serde_json = "1.0"
tempfile = "3"
unicode_categories = "0.1"
zip = { git = "https://github.com/cessen/zip", branch = "raw_filename" }
