[package]
name = "kobo_jp_dict"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"


[dependencies]
clap = { version = "3", features = ["wrap_help", "cargo"] }
flate2 = "1"
quick-xml = "0.36.1"
regex = "1.5"
lazy_static = "1.4"
serde_json = "1.0"
tempfile = "3"
unicode_categories = "0.1"
zip = { git = "https://github.com/cessen/zip", branch = "raw_filename" }
furigana_gen = { git = "https://github.com/cessen/furigana_gen.git", branch = "main" }
